# fixca

./: Dockerfile  MANIFEST.in  Makefile  README.md  bootstrap  cert.csr  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: docker-build.yml  tox.yml
fixca/: __init__.py  __main__.py  args.py  ca.py  k8s.py  utils.py
fixca/static/: index.html
tests/: test_ca.py  test_util.py
